# controllers/genresController.js
@@ -1,15 +1,9 @@
 const userModel = require('../models/genresModel')
 
-const listAllUsers = async (req, res) => {
-  //#swagger.tags = ['Users']
-  /* #swagger.parameters['body'] = {
-      in: 'body',
-      description: 'List all users',
-      required: true,
-      schema: { $ref: '#/definitions/User' }
-  } */
+const listAllGenres = async (req, res) => {
+  //#swagger.tags = ['Genres']
   try {
-    const users = await userModel.getAllUsers()
+    const users = await userModel.getAllGenres()
     res.setHeader('Content-Type', 'application/json')
     res.status(200).json(users)
   } catch (err) {
@@ -18,40 +12,28 @@ const listAllUsers = async (req, res) => {
   }
 }
 
-const insertUser = async (req, res) => {
-  //#swagger.tags = ['Users']
-  /* #swagger.parameters['body'] = {
-      in: 'body',
-      description: 'Add a user to list',
-      required: true,
-      schema: { $ref: '#/definitions/User' }
-  } */
+const insertAGenre = async (req, res) => {
+  //#swagger.tags = ['Genres']
   try{
     const objectData = req.body
-    const user = await userModel.addASingleMovie(objectData);
+    const user = await userModel.addASingleGenre(objectData);
     res.setHeader('Content-Type', 'application/json')
-    res.status(201).json({message:'You successfully created a new user', id: user._id})
+    res.status(201).json({message:'You successfully created a new genre', id: user._id})
   }catch(err){
     console.error('Failed to insert user')
     res.status(400).json({message: err.message || 'A server error occured.'})
   }
 }
 
-const modifyAUser = async (req, res) => {
-  //#swagger.tags = ['Users']
-  /* #swagger.parameters['body'] = {
-      in: 'body',
-      description: 'Update a user based on id',
-      required: true,
-      schema: { $ref: '#/definitions/User' }
-  } */
+const modifyAGenre = async (req, res) => {
+  //#swagger.tags = ['Genres']
   try{
     const userId = req.params.id
     const userData = req.body
     if(!userData.genreName || !userData.description|| !userData.popularMovies || !userData.subGenres){
       throw new Error('All the fields must be included')
     }
-    const updatedUser = await userModel.updateAMovie(userId, userData)
+    const updatedUser = await userModel.updateAGenre(userId, userData)
     res.setHeader('Content-Type', 'application/json')
     res.status(201).json({message:'User was updated succesfully', id: updatedUser._id})
   }catch(err) {
@@ -59,15 +41,9 @@ const modifyAUser = async (req, res) => {
   }
 }
 
-const removeAUser = async (req, res) =>{
-  //#swagger.tags = ['Users']
-  /* #swagger.parameters['body'] = {
-      in: 'body',
-      description: 'Delete a user from list',
-      required: true,
-      schema: { $ref: '#/definitions/User' }
-  } */
-  const deletedUser = await userModel.deleteAMovie(req.params.id);
+const removeAGenre = async (req, res) =>{
+  //#swagger.tags = ['Genres']
+  const deletedUser = await userModel.deleteAGenre(req.params.id);
   res.setHeader('Content-Type', 'application/json');
   
   if (deletedUser.error) {
@@ -85,4 +61,4 @@ const removeAUser = async (req, res) =>{
   // }
 }
 
-module.exports = { listAllUsers, insertUser, modifyAUser, removeAUser}
+module.exports = { listAllGenres, insertAGenre, modifyAGenre, removeAGenre}
