# routes/genresRoutes.js
@@ -8,24 +8,24 @@ const utilities = require('../utilities/validation')
 router.use('/', require('./swagger'))
 
 // Routes to get all user
-router.get('/genres', genresController.listAllUsers)
+router.get('/genres', genresController.listAllGenres)
 
 // Routes to add a new user
 router.post('/genres', 
     utilities.createUserRules(),
     utilities.checkCreateUserData, 
-    genresController.insertUser
+    genresController.insertAGenre
 )
 
 // Route to update a user
 router.put('/genres/:id', 
     utilities.createUserRules(),
     utilities.checkCreateUserData, 
-    genresController.modifyAUser
+    genresController.modifyAGenre
 )
 
 // Route to delete a user
-router.delete('/genres/:id', genresController.removeAUser)
+router.delete('/genres/:id', genresController.removeAGenre)
 
 
 module.exports = router
